--- a/EngagementRateAna _FINAL_Validated.ipynb
+++ b/EngagementRateAna _FINAL_Validated.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('DSAIDA_Validated.xlsx')"
+    "df = pd.read_excel('https://github.com/Sulaimaaan/Engagement-Rate-Analysis/blob/289b6fc6ecf3b853eb1084880b9e4e26a3af8ff8/DSAIDA_Validated.xlsx')"
    ]
   },
   {
